--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
 
 ##数据源
 spring:
+  application:
+    name: nacos-server
+  profiles:
+    active: dev
   datasource:
     name: test01
     url: jdbc:mysql://localhost:3306/test01?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC #url
